--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-uvicorn[standard]==0.20.0
-gunicorn==20.1.0
-fastapi[all]==0.89.1
-loguru
-pytest
-pytest-cov
 ultralytics
-Roboflow
 opencv-python
-easyocr
+Pillow
+csv
+shutil
+tempfile
+matplotlib
+seaborn
+pandas
+kivy
+torch
+torchvision
